# prompt-hub

./: .gitignore  .prettierignore  CLAUDE.md  HANDOFF.md  constitution.md  design-spec.md  doc-governance.config.mjs  eslint.config.js  features.md  index.html  ops-spec.md  package.json  plan.md  pnpm-lock.yaml  prd.md  product-spec.md  sitemap.md  spec.md  tech-stack.md  test-spec.md  user-flows.md  vite.config.ts
.claude/agents/: verifier.md
.github/workflows/: ci.yml  release.yml
adr/: 001-choose-desktop-runtime.md  002-choose-frontend-framework.md  003-choose-data-persistence.md  004-choose-package-manager.md  005-prompt-combiner-reuse.md  006-choose-state-management.md  007-choose-test-stack.md  008-enable-macos-private-api.md  009-choose-styling.md
bench/: cold-start.bench.mjs  hotkey-wake.bench.mjs
docs/: MANIFEST.md  learnings.md
docs/adr/: 000-template.md  001-choose-desktop-runtime.md  002-choose-frontend-framework.md  003-choose-data-persistence.md  004-choose-package-manager.md  005-prompt-combiner-reuse.md  006-choose-state-management.md  007-choose-test-stack.md  008-enable-macos-private-api.md  009-choose-styling.md  010-doc-directory-restructure.md  011-search-usagesource.md  012-lock-visual-quality-anchor.md  013-alignment-phrases-tab-inclusion.md  014-nspanel-isa-swizzle.md  015-expose-mcp-write-pipeline.md  016-choose-dnd-and-resizable-layout.md  017-enable-auto-update.md  018-absorb-promptscape-design.md  019-supersede-flat-visual-anchor.md  020-restore-protocol-dark-band.md  021-scene-layered-editing.md  022-cross-scene-phrase-move.md  023-ui-reshape-before-release.md  024-dark-cockpit-identity.md
docs/design/: 01-spec.md  02-constitution.md  03-product-spec.md  04-user-flows.md  05-design-spec.md  06-prd.md  07-features.md  08-sitemap.md  09-tech-stack.md  10-ops-spec.md  11-test-spec.md  CHANGELOG.md  CLAUDE-DESIGN.md  README.md
docs/design-handoff/: README.md
docs/design-handoff/project/: .thumbnail  Promptscape 全景仪表盘.dc.html
docs/mockups/: prompt-hub.html
docs/plans/: adr-017-auto-update.md  asset-editing-and-adaptive-layout.md  mcp-write-pipeline.md  prompt-hub-mvp.md  scene-layered-editing.md  scene-phrase-editing.md  scene-substage-editing.md  ui-reshape.md
docs/research/: 2026-06-04-resizable-panels.md  2026-07-12-ux-taskflow-audit.md  README.md
docs/workflows/: claude-design-prompts.md  m0-4-macos-signing.md
scripts/: assert-provenance.sh  check-version.sh
scripts/doc-governance/: checks.mjs  doc-refs-gate.test.ts  index.mjs
src/: App.css  App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/prompt-hub-mcp/: Cargo.toml
src-tauri/crates/prompt-hub-mcp/src/: errors.rs  main.rs  server.rs  tools.rs
src-tauri/crates/prompt-hub-mcp/tests/: e2e.rs  trybuild_negative.rs
src-tauri/crates/prompt-hub-mcp/tests/ui/: import_repo_write.rs  import_repo_write.stderr
src-tauri/crates/repo-core/: Cargo.toml
src-tauri/crates/repo-core/migrations/: 0001_initial.sql  0002_seed.sql  0003_drafts.sql  0004_compositions.sql  0005_macros_order_index.sql  0006_modifiers_order_index.sql  0007_alignment_phrases_order_index.sql  0008_compositions_order_index.sql  0009_phrases_order_index.sql  0010_scene_icons_lucide.sql  0011_seed_sub_stages.sql
src-tauri/crates/repo-core/src/: asset_read.rs  backup.rs  db.rs  draft_repo.rs  error.rs  export.rs  lib.rs  models.rs  repo.rs
src-tauri/crates/repo-write/: Cargo.toml
src-tauri/crates/repo-write/src/: alignment_phrases.rs  asset_repo.rs  compositions.rs  import.rs  lib.rs  macros.rs  modifiers.rs  phrases.rs  promote.rs  scenes.rs  sub_stages.rs
src-tauri/crates/repo-write/tests/: backup_e2e.rs
src-tauri/icons/: icon.icns
src-tauri/src/: bench.rs  commands.rs  db.rs  error.rs  lib.rs  macos.rs  main.rs  models.rs  repo.rs
src/components/: AlignmentPhrases.module.css  AlignmentPhrases.tsx  CompositionWorkbench.module.css  CompositionWorkbench.tsx  DraftInbox.module.css  DraftInbox.tsx  ErrorBoundary.module.css  ErrorBoundary.tsx  Header.module.css  Header.tsx  HotkeyBanner.module.css  HotkeyBanner.tsx  MacroGrid.module.css  MacroGrid.tsx  ModeToggle.module.css  ModeToggle.tsx  ModifierGrid.module.css  ModifierGrid.tsx  PhaseBar.module.css  PhaseBar.tsx  ProtocolBand.module.css  ProtocolBand.tsx  RecentList.module.css  RecentList.tsx  SceneIcon.tsx  ScenePanel.module.css  ScenePanel.tsx  ScenePropertiesEditor.module.css  ScenePropertiesEditor.tsx  SearchBar.module.css  SearchBar.tsx  SearchOverlay.module.css  SearchOverlay.tsx  SettingsModal.module.css  SettingsModal.tsx  SopProgress.module.css  SopProgress.tsx  StatusBar.module.css  StatusBar.tsx  Toast.module.css  (+4 more)
src/components/__tests__/: AlignmentPhrases.test.tsx  CompositionWorkbench.test.tsx  DraftInbox.test.tsx  ErrorBoundary.test.tsx  HotkeyBanner.test.tsx  MacroGrid.test.tsx  ModeToggle.test.tsx  ModifierGrid.test.tsx  PhaseBar.test.tsx  RecentList.test.tsx  ScenePanel.test.tsx  ScenePanelFocusRestore.test.tsx  ScenePropertiesEditor.test.tsx  SearchBar.test.tsx  SearchOverlay.test.tsx  SettingsModal.test.tsx  StatusBar.test.tsx  UpdaterBanner.test.tsx  b2-separation.test.ts  composition-b2-separation.test.ts
src/components/primitives/: Button.tsx  Chip.tsx  Cluster.tsx  Editor.tsx  EmptyState.tsx  Kbd.tsx  PhraseFormEditor.tsx  RegionHeader.tsx  Surface.tsx  cx.ts  index.ts  primitives.module.css
src/components/scene/: InlineNameEditor.tsx  PhraseEditor.tsx  PhraseMoveSelector.tsx  ScenePanel.tsx  SceneTabs.tsx  ViewColumn.tsx  ViewPhraseCard.tsx  (+1 more)
src/hooks/: useClipboard.ts  useCopy.ts  useFocusRestore.ts  usePhaseSelect.ts  useRegionNav.ts  useSearchResults.ts
src/ipc/: index.ts  ipc-contract.test.ts  types.ts
src/layouts/: Dashboard.module.css  Dashboard.tsx
src/stores/: appStore.ts  promptStore.ts  searchStore.ts  settingsStore.ts  toastStore.ts  updaterStore.ts
src/styles/: token-gate.test.ts  tokens.css  typography.module.css
src/test/: setup.ts
src/utils/: errorMessage.ts  platform.ts  time.ts
(+77 files in other folders)
