[package]
name = "prompt-hub"
version = "0.1.0"
description = "Manual-transmission desktop dashboard for prompt assets and human-AI alignment"
authors = ["omar saleem <omarsaleem1232020@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "prompt_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# macos-private-api: required for transparent always-on-top window (ADR-008)
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Data layer (ADR-003) — M0 dependency compatibility validation
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
# Already pulled in transitively by Tauri 2; declared explicitly so we can
# use tokio::time::sleep inside tauri::async_runtime::spawn (P1-1 cancelable
# 200ms hide). `time` feature is the only thing we need.
tokio = { version = "1", features = ["time"] }

[target.'cfg(target_os = "macos")'.dependencies]
# Used to set NSWindowCollectionBehavior so the overlay joins all Spaces
# (incl. system fullscreen Spaces). Without this, ⌥Space wakes the window
# only into its original Space — invisible to the user when another app is
# in fullscreen. See lib.rs setup(). Versions match Tauri 2.x transitive
# pin (objc2 0.6 / objc2-app-kit 0.3) to avoid duplicate symbol bloat.
objc2 = "0.6"
objc2-app-kit = "0.3"

[dev-dependencies]
tempfile = "3"

[features]
# Opt-in wake-latency instrumentation. Enable with `cargo build --features bench`.
# When set, lib.rs auto-cycles show()+focus()+hide() and emits JSON-line samples
# to stdout instead of waiting for ⌥Space. See bench/hotkey-wake.bench.mjs.
bench = []

